objects/CustomListview__c.object
<CustomObject>
    <fields>
        <fullName>Custom_Buttons__c</fullName>
        <description>Buttons that should appear on this Custom List View.</description>
        <label>Custom Buttons</label>
        <picklist>
            <picklistValues>
                <fullName>Assign to myself</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieldSet_Name__c</fullName>
        <defaultValue>&quot;External_list_view&quot;</defaultValue>
        <description>field to hold the name of a fieldset for building tables</description>
        <label>FieldSet Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fields_String__c</fullName>
        <label>Fields String</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_Closed_View__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Closed View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>List_Order__c</fullName>
        <description>This is used by the Custom_case_listview to set the custom listviews into the correct order</description>
        <label>List Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>List_Size_Options__c</fullName>
        <label>List Size Options</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>List_view_name__c</fullName>
        <label>List view name</label>
        <picklist>
            <picklistValues>
                <fullName>Cases awaiting pickup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>My closed cases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>My open cases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open cases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comments</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <description>This is the API name of the object which the listview is for</description>
        <label>Object</label>
        <picklist>
            <picklistValues>
                <fullName>Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Knowledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CaseComment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attachment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Order_by__c</fullName>
        <label>Order by</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Field_API_Name__c</fullName>
        <description>This is the API or Developer name for the parent field.  The component looks for the ID of the parent record in this field as part of a dynamic query</description>
        <label>Parent Field API Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Criteria__c</fullName>
        <description>This field is used by Custom_Case_Listview to build the dynamic SOQL Query string.  Visibility is currently set for System Administrators only.  It has to be in legitimate SOQL language</description>
        <inlineHelpText>This field currently is to be filled out in SOQL language and is the WHERE Clause for the search</inlineHelpText>
        <label>Search Criteria</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Then_by__c</fullName>
        <label>Then by</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_Fieldset__c</fullName>
        <defaultValue>false</defaultValue>
        <description>some related lists don&apos;t have the ability to user field sets.  This allows for bypass of fieldset and use of a delimited String</description>
        <label>Use Fieldset</label>
        <type>Checkbox</type>
    </fields>
    <label>CustomListview</label>
    <listViews>
        <fullName>All</fullName>
        <columns>List_view_name__c</columns>
        <columns>FieldSet_Name__c</columns>
        <columns>Search_Criteria__c</columns>
        <columns>Order_by__c</columns>
        <columns>Then_by__c</columns>
        <columns>List_Size_Options__c</columns>
        <columns>List_Order__c</columns>
        <columns>Is_Closed_View__c</columns>
        <columns>Default__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LV-{0000}</displayFormat>
        <label>Listview_Option Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CustomListviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>